<resources>
    <string name="app_name">Donasi app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="donasiku">DonasiKu</string>
    <string name="sharing_is_">Sharing is beautiful</string>
    <string name="logout">logout</string>
    <string name="choose_your">CHOOSE YOUR LANGUANGE</string>
    <string name="choose">choose your language to make it easier for you\n to use this application</string>
    <string name="finish">Finish</string>
    <string name="finish">Finish</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>

</resources>
